tests/ui/traits/non_lifetime_binders/placeholders-dont-outlive-static.good.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/placeholders-dont-outlive-static.rs:6:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0310]: the placeholder type `T` may not live long enough
  --> $DIR/placeholders-dont-outlive-static.rs:19:5
   |
LL |     foo();
   |     ^^^^^
   |     |
   |     the placeholder type `T` must be valid for the static lifetime...
   |     ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn good() where for<T> T: 'static, T: 'static {
   |                                  ++++++++++++

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0310`.
